# markdown-viewer

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: post-ts-lint.sh  pre-policy.sh  stop-verify.sh
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-tauri-2x-stack.md  0002-tailwind-v4-and-github-markdown-css.md  0003-codemirror-for-edit-mode.md  0004-macos-file-associations.md  0005-multi-file-tabs.md  0006-edit-mode-autosave.md
e2e/: tsconfig.json  wdio.conf.ts
e2e/specs/: anchors.spec.ts  app.spec.ts  search.spec.ts
scripts/: pdf-visual-qa.ts  vitest.visual.config.ts
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pending_open.rs  watcher.rs
src/components/: DropZone.test.tsx  DropZone.tsx  Editor.test.tsx  Editor.tsx  SearchBar.tsx  ShortcutsHelp.test.tsx  ShortcutsHelp.tsx  Tabs.test.tsx  Tabs.tsx  Toolbar.test.tsx  Toolbar.tsx  Viewer.tsx
src/hooks/: useFitDisplayMath.test.tsx  useFitDisplayMath.ts  useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts  useMarkdownFile.test.tsx  useMarkdownFile.ts  useRecentFiles.test.ts  useRecentFiles.ts  useTabPersistence.test.ts  useTabPersistence.ts  useTabs.test.tsx  useTabs.ts  useTheme.test.ts  useTheme.ts
src/lib/: fit-math.test.ts  fit-math.ts  links.ts  (+18 more)
test/: sample.md  setup.ts
(+50 files in other folders)
