[package]
name = "markdown-viewer"
version = "0.1.0"
description = "Fast Tauri 2 markdown viewer with GFM support"
authors = ["Sakasegawa"]
edition = "2021"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
dbg_macro = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
